# AI-SQL-Agent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  README_EN.md  chk2.js  pyproject.toml
docs/: index.html
examples/: agent_workflow_diagram.md  demo.py  demo_agent_trace.py  demo_cli_showcase.md
src/ai_sql_agent/: __init__.py  agent.py  assistant.py  cli.py  config.py  web.py
src/ai_sql_agent/db/: __init__.py  connector.py  dialects.py  validator.py
src/ai_sql_agent/models/: __init__.py  base.py  providers.py
src/ai_sql_agent/prompts/: templates.py
src/ai_sql_agent/utils/: formatter.py
tests/: test_agent.py
